[package]
name = "stringbird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# swc_common = "0.38.0"
# with tty-emitter
swc_common = { version = "0.38.0", features = ["tty-emitter"] }
swc_ecma_ast = "0.119.0"
swc_ecma_parser = "0.150.0"
swc_ecma_visit = "0.105.0"
swc_visit = "0.6.2"
